<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <Button
        android:id="@+id/checkCurrentContactListButton"
        android:layout_width="400sp"
        android:layout_height="80sp"
        android:textSize="20sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/checkCurrentContactListButtonText"
        />
    <TextView
        android:id="@+id/orText"
        android:layout_width="100sp"
        android:layout_height="80sp"
        android:layout_below="@+id/checkCurrentContactListButton"
        android:layout_centerInParent="true"
        android:text="OR"
        android:textSize="60sp"/>
    <TextView
        android:id="@+id/nameQueryTextView"
        style="@style/commonTextViewSizes"
        android:text="@string/nameQueryTextView"
        android:layout_below="@+id/orText"
        />
    <EditText
        android:id="@+id/inputNameField"
        style="@style/commonEditTextSizes"
        android:layout_toRightOf="@+id/nameQueryTextView"
        android:layout_below="@id/orText"
        android:hint="@string/inputNameFieldHint"
        />
    <TextView
        android:id="@+id/numberQueryTextView"
        style="@style/commonTextViewSizes"
        android:layout_width="100sp"
        android:text="@string/numberQueryTextViewText"
        android:layout_below="@id/inputNameField"/>
    <EditText
        android:id="@+id/inputNumberField"
        style="@style/commonEditTextSizes"
        android:layout_below="@id/inputNameField"
        android:layout_toRightOf="@+id/numberQueryTextView"
        android:hint="@string/inputNumberFieldHint"
        />
    <TextView
        android:id="@+id/numberOfDaysQueryTextView"
        style="@style/commonTextViewSizes"
        android:layout_below="@id/inputNumberField"
        android:layout_width="240sp"
        android:text="@string/numberOfDaysQueryTextView"
        />
    <EditText
        android:id="@+id/inputNumberOfDaysField"
        style="@style/commonEditTextSizes"
        android:layout_below="@id/inputNumberField"
        android:layout_toRightOf="@id/numberOfDaysQueryTextView"
        android:hint="123"
        />
    <Button
        android:layout_width="100sp"
        android:layout_height="80sp"
        android:layout_below="@id/numberOfDaysQueryTextView"
        android:layout_centerInParent="true"
        android:text="@string/addMeButtonText"
        android:textSize="20sp"/>

</RelativeLayout>
